SubVersion: $Id$

To do: 
	- USB pass-thru support
	- bug with API mode (Linux & Windows): may not work with some calcs ?!

Checking: valgrind & splint
	
Log:

- 11/06/2004, version 3.8.6: jb
	Added support for x86-64 (configure.ac, configure).

- 22/05/2004, version 3.8.6: roms
	Bug fixes from JB: buffer overflow in linux_detect.c, NULL functions
	with direct link support.
	
- 05/05/2004, version 3.8.5: roms
	Bug fix in the verbose.c compatibility support (DISPLAY).
	Merged Tijl's patch: does not build or use libusb support if libusb
	not detected.
	link_dfl changed into link_nul (null cable). Added null method and null
	port in order to implement a pure null cable.
	Default settings are now set to a null cable/port.
	
- 24/04/2004, version 3.8.4: roms
	Added buffered write support to the SilverLink / Win32 module. 
	Driver 3.0.2.1 is needed. Tested with various transfers.

- 21/04/2004, version 3.8.3: roms
	Added full/partial BUFFERED_W (heuristic) support to get the best of
	both worlds ! Tested with group, idlist, clock, backup, 
	FLASH apps (s/r), ROM dump and FLASH os.
	This really speed-up FLASH app transfer (sending).
	Done the same work for tiglusb kernel module support. This stuff will 
	be moved into the module later...
	
- 17/04/2004, version 3.8.2: roms
	Bug in lib-usb support: wrong timeout passed to libusb (1/10 of
	value) => short timeout !
	Discovered the same bug in tipar/tiser/tiusb kernel module !

	Note: USB support default behaviour is: BUFFERED_R=1 & BUFFERED_W=0.
	Using BUFFERED_W make FLASH sending faster but communication is less 
	reliable.
	
- 08/04/2004, version 3.8.1: roms
	Redirection of stdout/stderr.
	Weird: we were using tilp/ticable.h. It should be linux/ticable.h.
	In fact, modules use tilp/ but built-in uses linux/.
	Modules will be modified to linux/.
	
- 22/03/2004, version 3.8.0: roms
	Splitted sources according to target and cables.
	Tested under Linux with:
	- GreyLink: api: ok
	- BlackLink: asm: ok, ioctl: ok, module: ?? 