@@ -8,6 +8,9 @@ Checking: valgrind & splint
 	
 Log:
 
+- 25/09/2004, version 3.8.7: roms
+	Added USB direct cable support (kernel module).
+	
 - 11/06/2004, version 3.8.6: jb
 	Added support for x86-64 (configure.ac, configure).
 
